# tower_defense

./: .gitignore  README.md  dino.py  game_map.py  main.py  main_window.ui  map_view.py  meteoro.py  package-lock.json  pyproject.toml  todo.txt  tower.py
core/: config.json  enemy_factory.py  game_manager.py  network_client.py  wave_manager.py
entities/: dino.py  meteoro.py  projectile.py  tower.py
res/textures/: cursor.pixil  grass.pixil  info_icon.pixil  menu_tower_icon.pixil  meteoro_all.pixil  meteoro_stage_0.pixil  meteoro_stage_1.pixil  sand.pixil  t_rex.pixil  tower.pixil  tower_2.pixil  tower_default.pixil  triceratops.pixil
res/ui/: main_window.ui  tower_menu.ui  tower_stats.ui
server/: server.py
ui/: stats_menu.py  tower_menu.py
world/: game_map.py  map.txt  map_view.py
